[gd_scene load_steps=3 format=2]

[ext_resource path="res://pixel.png" type="Texture" id=1]
[ext_resource path="res://Node2D.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite1" type="Sprite" parent="."]
position = Vector2( 110, 110 )
scale = Vector2( 100, 100 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 110, 270 )
scale = Vector2( 100, 100 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 110, 430 )
scale = Vector2( 100, 100 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 430, 110 )
scale = Vector2( 100, 100 )
texture = ExtResource( 1 )

[node name="Sprite7" type="Sprite" parent="."]
position = Vector2( 270, 110 )
scale = Vector2( 100, 100 )
texture = ExtResource( 1 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 430, 270 )
scale = Vector2( 100, 100 )
texture = ExtResource( 1 )

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( 430, 430 )
scale = Vector2( 100, 100 )
texture = ExtResource( 1 )

[node name="Sprite8" type="Sprite" parent="."]
position = Vector2( 270, 430 )
scale = Vector2( 100, 100 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 270.0
margin_top = 270.0
margin_right = 310.0
margin_bottom = 310.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
